--- a/about.html
+++ b/about.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Về chúng tôi</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="active">About</a></li>
-            <li><a href="labs.html">Labs</a></li>
-            <li><a href="login.html">Đăng nhập</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="labs.html">Labs</a></li>
+        <li><a href="#" onclick="logout()">Đăng xuất</a></li>
+      </ul>
     </nav>
     <div class="container">
-        <h1>Về chúng tôi</h1>
-        <p>Chúng tôi là một nhóm phát triển với mục tiêu cung cấp hệ thống quản lý khóa học chất lượng cao.</p>
+      <h1>Về chúng tôi</h1>
+      <p>Đây là trang giới thiệu về chúng tôi.</p>
     </div>
-</body>
+
+    <script>
+      if (!localStorage.getItem("loggedIn")) {
+        window.location.href = "login.html";
+      }
+
+      function logout() {
+        localStorage.removeItem("loggedIn");
+        window.location.href = "login.html";
+      }
+    </script>
+  </body>
 </html>
