--- a/labs.html
+++ b/labs.html
@@ -1,26 +1,90 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Labs</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="labs.html" class="active">Labs</a></li>
-            <li><a href="login.html">Đăng nhập</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="labs.html" class="active">Labs</a></li>
+        <li><a href="#" onclick="logout()">Đăng xuất</a></li>
+      </ul>
+      <ul>
+        <li><a href="#" onclick="showLab('lab1')">Lab 1</a></li>
+        <li><a href="#" onclick="showLab('lab2')">Lab 2</a></li>
+        <li><a href="#" onclick="showLab('lab3')">Lab 3</a></li>
+      </ul>
     </nav>
     <div class="container">
-        <h1>Các phòng thí nghiệm</h1>
-        <p>Chọn một lab bên dưới để xem chi tiết:</p>
-        <div class="tab" onclick="showLab('lab1')">Lab 1</div>
-        <div class="tab" onclick="showLab('lab2')">Lab 2</div>
-        <div class="tab" onclick="showLab('lab3')">Lab 3</div>
+      <div id="labContent" class="lab-content" style="display: none">
+        <h2 id="labTitle"></h2>
+        <div id="labDescription"></div>
+      </div>
     </div>
-</body>
+    <script>
+      if (!localStorage.getItem("loggedIn")) {
+        window.location.href = "login.html";
+      }
+
+      function logout() {
+        localStorage.removeItem("loggedIn");
+        window.location.href = "login.html";
+      }
+
+      function showLab(lab) {
+        let labTitle = "";
+        let labFile = "";
+
+        switch (lab) {
+          case "lab1":
+            labTitle = "Lab 1: Quản lý về khóa học";
+            labFile = "lab1.html"; // Đường dẫn tới file lab1.html
+            break;
+          case "lab2":
+            labTitle = "Lab 2: CSS cơ bản";
+            labFile = "lab2.html"; // Đường dẫn tới file lab2.html
+            break;
+          case "lab3":
+            labTitle = "Lab 3: JavaScript cơ bản";
+            labFile = "lab3.html"; // Đường dẫn tới file lab3.html
+            break;
+        }
+
+        document.getElementById("labTitle").innerText = labTitle;
+        fetch(labFile) // Tải nội dung từ file lab
+          .then((response) => response.text())
+          .then((data) => {
+            document.getElementById("labDescription").innerHTML = data; // Hiển thị nội dung
+            document.getElementById("labContent").style.display = "block"; // Hiển thị nội dung lab
+
+            // Khởi tạo các biến và hàm cho quản lý khóa học
+            initializeCourseManagement();
+          })
+          .catch((error) => {
+            console.error("Error fetching the lab file:", error);
+          });
+      }
+
+      function initializeCourseManagement() {
+        // Biến toàn cục cho khóa học
+        window.courses = [];
+        window.isEditing = false;
+        window.editingIndex = -1;
+
+        // Khởi tạo các hàm liên quan đến quản lý khóa học
+        window.showCourseForm = showCourseForm;
+        window.cancelCourse = cancelCourse;
+        window.clearForm = clearForm;
+        window.saveCourse = saveCourse;
+        window.renderCourseList = renderCourseList;
+        window.editCourse = editCourse;
+        window.deleteCourse = deleteCourse;
+      }
+    </script>
+  </body>
 </html>
