--- a/login.html
+++ b/login.html
@@ -1,45 +1,198 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+    <title>Đăng nhập</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+      }
+      .container {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      h1 {
+        text-align: center;
+        color: #333;
+      }
+      .login-container {
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        margin-bottom: 20px;
+      }
+      input[type="text"],
+      input[type="password"],
+      select {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
+      }
+      button {
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        background-color: #28a745;
+        color: white;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        width: 100%;
+      }
+      button:hover {
+        background-color: #218838;
+      }
+      .social-login {
+        text-align: center;
+        margin-top: 20px;
+      }
+      .social-login button {
+        margin: 5px;
+      }
+      .language-selector {
+        margin: 10px 0;
+      }
+      .alternate-login {
+        text-align: center;
+        margin-top: 10px;
+      }
+      .alternate-login a {
+        color: #007bff;
+        text-decoration: none;
+      }
+      .back-button {
+        margin-top: 10px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
     <div class="container">
-        <!-- Màn hình đăng nhập -->
-        <div class="login-container">
-            <h1>Đăng Nhập</h1>
-            <form id="loginForm" onsubmit="return login()">
-                <label for="username">Tên đăng nhập/Email:</label>
-                <input type="text" id="username" name="username" required />
+      <!-- Màn hình đăng nhập -->
+      <div class="login-container">
+        <h1 id="loginTitle">Đăng Nhập</h1>
+        <form id="loginForm" autocomplete="off">
+          <label id="usernameLabel" for="username">Tên đăng nhập/Email:</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            autocomplete="off"
+            required
+          />
 
-                <label for="password">Mật khẩu:</label>
-                <input type="password" id="password" name="password" required />
+          <label id="passwordLabel" for="password">Mật khẩu:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            autocomplete="off"
+            required
+          />
 
-                <button type="submit">Đăng Nhập</button>
-                <a href="#" class="forgot-password">Quên mật khẩu?</a>
-            </form>
+          <div class="language-selector">
+            <label id="languageLabel" for="languageSelect"
+              >Chọn ngôn ngữ:</label
+            >
+            <select id="languageSelect">
+              <option value="vi">Tiếng Việt</option>
+              <option value="en">English</option>
+            </select>
+          </div>
+
+          <button type="submit" id="loginButton">Đăng Nhập</button>
+          <a href="#" class="forgot-password" id="forgotPassword"
+            >Quên mật khẩu?</a
+          >
+          <div class="alternate-login">
+            <a href="#">Đăng nhập bằng cách khác</a>
+          </div>
+        </form>
+        <div class="back-button" id="backButton" style="display: none">
+          <button onclick="goBack()">Quay lại</button>
         </div>
+        <div class="social-login">
+          <button><i class="fab fa-facebook-f"></i> FB</button>
+          <button class="google-btn">
+            <i class="fab fa-google"></i> Google
+          </button>
+          <button class="zalo-btn"><i class="fab fa-weixin"></i> Zalo</button>
+        </div>
+      </div>
     </div>
 
     <script>
-        function login() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+      // Xoá thông tin đăng nhập khi tải lại trang
+      window.onload = function () {
+        document.getElementById("username").value = "";
+        document.getElementById("password").value = "";
+        localStorage.removeItem("loggedIn");
+        document.getElementById("backButton").style.display = "none"; // Ẩn nút Quay lại
+      };
 
-            // Giả sử người dùng đăng nhập thành công với thông tin này
-            if (username === 'admin' && password === '123456') {
-                // Lưu trạng thái đăng nhập
-                localStorage.setItem('loggedIn', true);
-                // Chuyển hướng đến trang chính sau khi đăng nhập
-                window.location.href = 'index.html';
-            } else {
-                alert('Tên đăng nhập hoặc mật khẩu không đúng.');
-            }
-            return false; // Ngăn chặn việc gửi form
+      // Xử lý sự kiện đăng nhập
+      document.getElementById("loginForm").onsubmit = function (event) {
+        event.preventDefault();
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+
+        if (username === "admin" && password === "123456") {
+          localStorage.setItem("loggedIn", "true");
+          // Redirect automatically after successful login
+          setTimeout(() => {
+            window.location.href = "index.html"; // Redirects to index.html
+          }, 1000); // Waits for 1 second before redirecting
+        } else {
+          alert("Tên đăng nhập hoặc mật khẩu không đúng.");
+          document.getElementById("backButton").style.display = "block"; // Show the back button
         }
+      };
+
+      function goBack() {
+        window.history.back(); // Trở về trang trước
+      }
+
+      // Đổi ngôn ngữ
+      document.getElementById("languageSelect").onchange = function () {
+        const selectedLanguage = this.value;
+        if (selectedLanguage === "vi") {
+          document.getElementById("loginTitle").innerText = "Đăng Nhập";
+          document.getElementById("usernameLabel").innerText =
+            "Tên đăng nhập/Email:";
+          document.getElementById("passwordLabel").innerText = "Mật khẩu:";
+          document.getElementById("loginButton").innerText = "Đăng Nhập";
+          document.getElementById("forgotPassword").innerText =
+            "Quên mật khẩu?";
+          document.getElementById("languageLabel").innerText = "Chọn ngôn ngữ:";
+          document.querySelector(".alternate-login a").innerText =
+            "Đăng nhập bằng cách khác";
+        } else {
+          document.getElementById("loginTitle").innerText = "Login";
+          document.getElementById("usernameLabel").innerText =
+            "Username/Email:";
+          document.getElementById("passwordLabel").innerText = "Password:";
+          document.getElementById("loginButton").innerText = "Login";
+          document.getElementById("forgotPassword").innerText =
+            "Forgot Password?";
+          document.getElementById("languageLabel").innerText =
+            "Select Language:";
+          document.querySelector(".alternate-login a").innerText =
+            "Login with another method";
+        }
+      };
     </script>
-</body>
+  </body>
 </html>
