--- a/labs.html
+++ b/labs.html
@@ -26,7 +26,9 @@
         <div id="labDescription"></div>
       </div>
     </div>
+    <script src="script.js"></script>
     <script>
+      // Kiểm tra xem người dùng có đăng nhập không
       if (!localStorage.getItem("loggedIn")) {
         window.location.href = "login.html";
       }
@@ -46,44 +48,37 @@
             labFile = "lab1.html"; // Đường dẫn tới file lab1.html
             break;
           case "lab2":
-            labTitle = "Lab 2: CSS cơ bản";
+            labTitle = "Lab 2: Hệ thống ngôn ngữ";
             labFile = "lab2.html"; // Đường dẫn tới file lab2.html
             break;
           case "lab3":
             labTitle = "Lab 3: JavaScript cơ bản";
             labFile = "lab3.html"; // Đường dẫn tới file lab3.html
             break;
+          default:
+            alert("Lab không hợp lệ!");
+            return; // Ngừng hàm nếu không tìm thấy lab
         }
 
         document.getElementById("labTitle").innerText = labTitle;
-        fetch(labFile) // Tải nội dung từ file lab
-          .then((response) => response.text())
+
+        // Xóa nội dung cũ trước khi tải nội dung mới
+        document.getElementById("labDescription").innerHTML = "";
+
+        fetch(labFile)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Network response was not ok");
+            }
+            return response.text();
+          })
           .then((data) => {
             document.getElementById("labDescription").innerHTML = data; // Hiển thị nội dung
             document.getElementById("labContent").style.display = "block"; // Hiển thị nội dung lab
-
-            // Khởi tạo các biến và hàm cho quản lý khóa học
-            initializeCourseManagement();
           })
           .catch((error) => {
             console.error("Error fetching the lab file:", error);
           });
-      }
-
-      function initializeCourseManagement() {
-        // Biến toàn cục cho khóa học
-        window.courses = [];
-        window.isEditing = false;
-        window.editingIndex = -1;
-
-        // Khởi tạo các hàm liên quan đến quản lý khóa học
-        window.showCourseForm = showCourseForm;
-        window.cancelCourse = cancelCourse;
-        window.clearForm = clearForm;
-        window.saveCourse = saveCourse;
-        window.renderCourseList = renderCourseList;
-        window.editCourse = editCourse;
-        window.deleteCourse = deleteCourse;
       }
     </script>
   </body>
