--- a/labs.html
+++ b/labs.html
@@ -18,6 +18,7 @@
         <li><a href="#" onclick="showLab('lab1')">Lab 1</a></li>
         <li><a href="#" onclick="showLab('lab2')">Lab 2</a></li>
         <li><a href="#" onclick="showLab('lab3')">Lab 3</a></li>
+        <li><a href="#" onclick="showLab('lab4')">Lab 44</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -54,6 +55,10 @@
           case "lab3":
             labTitle = "Lab 3: JavaScript cơ bản";
             labFile = "lab3.html"; // Đường dẫn tới file lab3.html
+            break;
+            case "lab4":
+            labTitle = "Lab 4: JavaScript cơ bản";
+            labFile = "lab4.html"; // Đường dẫn tới file lab4.html
             break;
           default:
             alert("Lab không hợp lệ!");
