--- a/labs.html
+++ b/labs.html
@@ -31,32 +31,32 @@
     <div class="tabs-container">
       <ul class="tabs-list">
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab1.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('/lab1/lab1.html')"
             >Lab 1</a
           >
         </li>
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab2.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('/lab2/lab2.html')"
             >Lab 2</a
           >
         </li>
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab3.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('/lab3/lab3.html')"
             >Lab 3</a
           >
         </li>
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab4.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('lab4/lab4.html')"
             >Lab 4</a
           >
         </li>
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab5.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('/lab5/lab5.html')"
             >Lab 5</a
           >
         </li>
         <li>
-          <a href="#" class="tab-link" onclick="loadLabContent('lab6.html')"
+          <a href="#" class="tab-link" onclick="loadLabContent('/lab6/lab6.html')"
             >Lab 6</a
           >
         </li>
